--- a/PLCSimUDP/App.config
+++ b/PLCSimUDP/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PLCSimUDP.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <PLCSimUDP.Properties.Settings>
+            <setting name="LocalIP" serializeAs="String">
+                <value>0.0.0.0</value>
+            </setting>
+            <setting name="LocalPort" serializeAs="String">
+                <value>2000</value>
+            </setting>
+            <setting name="RemIP" serializeAs="String">
+                <value>192.168.5.2</value>
+            </setting>
+            <setting name="RemPort" serializeAs="String">
+                <value>2000</value>
+            </setting>
+            <setting name="MFP_Skid" serializeAs="String">
+                <value />
+            </setting>
+        </PLCSimUDP.Properties.Settings>
+    </userSettings>
 </configuration>
