--- a/UDP_RXTX/App.config
+++ b/UDP_RXTX/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="UDP_RXTX.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <UDP_RXTX.Properties.Settings>
+            <setting name="Ajpi" serializeAs="String">
+                <value>192.168.2.5</value>
+            </setting>
+            <setting name="port" serializeAs="String">
+                <value>9000</value>
+            </setting>
+        </UDP_RXTX.Properties.Settings>
+    </userSettings>
 </configuration>
