--- a/PLCSimUDP/App.config
+++ b/PLCSimUDP/App.config
@@ -25,6 +25,9 @@
             <setting name="MFP_Skid" serializeAs="String">
                 <value />
             </setting>
+            <setting name="tbTimerMFP" serializeAs="String">
+                <value>900</value>
+            </setting>
         </PLCSimUDP.Properties.Settings>
     </userSettings>
 </configuration>
