w zasadzie skonczony PLCSim

--- a/PLCSimUDP/PLCSimUDP.csproj
+++ b/PLCSimUDP/PLCSimUDP.csproj
@@ -77,6 +77,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\dmspl.common\dmspl.common.csproj">
+      <Project>{651db95e-034a-4bc2-9e64-8a00e16a4697}</Project>
+      <Name>dmspl.common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
