--- a/dmspl.gui/App.config
+++ b/dmspl.gui/App.config
@@ -2,11 +2,11 @@
 <configuration>
     <configSections>
     </configSections>
-    <connectionStrings>
+    <!--<connectionStrings>
         <add name="dmspl.gui.Properties.Settings.EMOS_WEBConnectionString"
             connectionString="Data Source=dbmachine\durr_systems;Initial Catalog=EMOS_WEB;Persist Security Info=True;User ID=user;Password=user;Connect Timeout=5"
             providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    </connectionStrings>-->
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
