--- a/PLCSimUDP/PLCSimUDP.csproj
+++ b/PLCSimUDP/PLCSimUDP.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -82,6 +83,15 @@
       <Project>{651db95e-034a-4bc2-9e64-8a00e16a4697}</Project>
       <Name>dmspl.common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Девушки %2819%29.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Девушки %2819%29 - Kopia.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Duerr_16-10 - Kopia.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
