--- a/dmspl.common/dmspl.common.csproj
+++ b/dmspl.common/dmspl.common.csproj
@@ -48,12 +48,28 @@
     <Compile Include="ErpDataset.cs" />
     <Compile Include="IUDPComm.cs" />
     <Compile Include="datamodels\MFPDataModel.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="Logger\FileLog.cs" />
+    <Compile Include="Logger\HTMLLog.cs" />
+    <Compile Include="Logger\IDataLog.cs" />
+    <Compile Include="Logger\XMLLog.cs" />
     <Compile Include="Obfuscation.cs" />
     <Compile Include="RegAuth.cs" />
     <Compile Include="ImporterType.cs" />
     <Compile Include="IDataImporter.cs" />
     <Compile Include="IDataStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
