przpeirdalany na nowo RXTX

--- a/UDP_RXTX/App.config
+++ b/UDP_RXTX/App.config
@@ -11,10 +11,13 @@
     <userSettings>
         <UDP_RXTX.Properties.Settings>
             <setting name="Ajpi" serializeAs="String">
-                <value>192.168.2.5</value>
+                <value>192.168.2.25</value>
             </setting>
-            <setting name="port" serializeAs="String">
-                <value>9000</value>
+            <setting name="LocalPort" serializeAs="String">
+                <value>2002</value>
+            </setting>
+            <setting name="TimeSF" serializeAs="String">
+                <value>1000</value>
             </setting>
         </UDP_RXTX.Properties.Settings>
     </userSettings>
