--- a/dmspl.gui/Properties/Settings.settings
+++ b/dmspl.gui/Properties/Settings.settings
@@ -2,13 +2,13 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="dmspl.gui.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <!--<Setting Name="EMOS_WEBConnectionString" Type="(Connection string)" Scope="Application">
+    <Setting Name="EMOS_WEBConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
   &lt;ConnectionString&gt;Data Source=dbmachine\durr_systems;Initial Catalog=EMOS_WEB;Persist Security Info=True;User ID=user;Password=user;Connect Timeout=5&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=dbmachine\durr_systems;Initial Catalog=EMOS_WEB;Persist Security Info=True;User ID=user;Password=user;Connect Timeout=5</Value>
-    </Setting>-->
+    </Setting>
   </Settings>
 </SettingsFile>
