--- a/dmspl.common/dmspl.common.csproj
+++ b/dmspl.common/dmspl.common.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BigEndianExtension\BigEndian.cs" />
     <Compile Include="datamodels\DataLifePacket.cs" />
     <Compile Include="datamodels\DataSetReqDataModelByBSN.cs" />
     <Compile Include="DataStorageSourceMode.cs" />
