--- a/dmspl.slqcon/app.config
+++ b/dmspl.slqcon/app.config
@@ -5,11 +5,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="dmspl.datastorage.Properties.Settings.EMOS_WEBConnectionString"
+    <!--<add name="dmspl.datastorage.Properties.Settings.EMOS_WEBConnectionString"
       connectionString="Data Source=dbmachine\durr_systems;Initial Catalog=EMOS_WEB;Persist Security Info=True;User ID=user;Password=user;Connection Timeout = 5"
       providerName="System.Data.SqlClient" />
     <add name="EMOS_WEBEntities" connectionString="metadata=res://*/DmsDataModel.csdl|res://*/DmsDataModel.ssdl|res://*/DmsDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SLAWEKWM\DURR_SYSTEMS;initial catalog=EMOS_WEB;persist security info=True;user id=user;password=user;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
+      providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
