--- a/dmspl.gui/App.config
+++ b/dmspl.gui/App.config
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="dmspl.gui.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
-    <!--<connectionStrings>
-        <add name="dmspl.gui.Properties.Settings.EMOS_WEBConnectionString"
-            connectionString="Data Source=dbmachine\durr_systems;Initial Catalog=EMOS_WEB;Persist Security Info=True;User ID=user;Password=user;Connect Timeout=5"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>-->
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <applicationSettings>
+        <dmspl.gui.Properties.Settings>
+            <setting name="test" serializeAs="String">
+                <value>dupa</value>
+            </setting>
+        </dmspl.gui.Properties.Settings>
+    </applicationSettings>
 </configuration>
