--- a/UDP_RXTX/UDP_RXTX.dll.config
+++ b/UDP_RXTX/UDP_RXTX.dll.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="UDP_RXTX.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="UDP_RXTX.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
-    <userSettings>
+    <applicationSettings>
         <UDP_RXTX.Properties.Settings>
             <setting name="Ajpi" serializeAs="String">
                 <value>192.168.2.25</value>
@@ -17,8 +17,8 @@
                 <value>2002</value>
             </setting>
             <setting name="TimeSF" serializeAs="String">
-                <value>1000</value>
+                <value>200</value>
             </setting>
         </UDP_RXTX.Properties.Settings>
-    </userSettings>
+    </applicationSettings>
 </configuration>
