--- a/dmsSrvc/dmsSrvc.csproj
+++ b/dmsSrvc/dmsSrvc.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7B486C20-ED14-4CBD-8A3A-25FBAB68633B}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{502C11A8-C2D1-4833-81D0-974B30147429}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UDP_RXTX</RootNamespace>
-    <AssemblyName>UDP_RXTX</AssemblyName>
+    <RootNamespace>dmsSrvc</RootNamespace>
+    <AssemblyName>dmsSrvc</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,55 +32,60 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>
-    </StartupObject>
+    <StartupObject>dmsSrvc.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DmsSrvcState.cs" />
+    <Compile Include="DmsSrvc.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="DmsSrvc.Designer.cs">
+      <DependentUpon>DmsSrvc.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="DmsSrvcProjectInstaller.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="DmsSrvcProjectInstaller.Designer.cs">
+      <DependentUpon>DmsSrvcProjectInstaller.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UDPComm.cs" />
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="UDP_RXTX.dll.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DmsSrvc.resx">
+      <DependentUpon>DmsSrvc.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DmsSrvcProjectInstaller.resx">
+      <DependentUpon>DmsSrvcProjectInstaller.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\dmspl.common\dmspl.common.csproj">
       <Project>{651db95e-034a-4bc2-9e64-8a00e16a4697}</Project>
       <Name>dmspl.common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\dmspl.slqcon\dmspl.datastorage.csproj">
+      <Project>{95261ac4-1ae1-4892-8633-ba7f95b7a123}</Project>
+      <Name>dmspl.datastorage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UDP_RXTX\UDP_RXTX.csproj">
+      <Project>{7b486c20-ed14-4cbd-8a3a-25fbab68633b}</Project>
+      <Name>UDP_RXTX</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
